--- a/Notebooks_r/03_Estructura_de_datos.Rmd
+++ b/Notebooks_r/03_Estructura_de_datos.Rmd
@@ -1,13 +1,9 @@
 ---
-title: "Estructura de datos en R"
+title: "Estructura de datos en R - Vectores"
 author: "Luis J Rubio"
 date: "2026-01-07"
 output: html_document
 ---
-# **Estructura de datos en R**
-
-*R* es capaz de manejar una variedad de tipos de datos, que se almacenan en
-diferentes estructuras de datos como: *vector*, *matriz* y *array*.
 
 ## **Vectores** 
 
@@ -165,5 +161,131 @@ vector_integer
 vector_character <- character(5)
 vector_character
 ```
+### **Nombrar elementos de un vector**
+Para nombrar los elementos de un vector podemos usar dos métodos **setNames()**  o **names()**
+
+```{r}
+cantidades <- c(30, 63, 78, 82)
+articulos <- c("tv","laptop","tablet","phone")
+frutas <- c("manzanas","peras","naranjas","bananas")
+
+print(cantidades)
+
+print(articulos)
+
+setNames(cantidades, articulos)
+
+names(cantidades) <- frutas
+print(cantidades)
+
+```
+La diferencia entre usar  **names()** y **setNames()** está en que **names()** modifica el
+atributo names del vector original, mientras que  **setNames()** genera un nuevo objeto,
+copia del original, con el atributo names. Este último comportamiento se llama
+“copiar-al-modificar”.
+
+### **Acceder a los elementos de un vector**
+
+Acceder a los elementos de un vector implica poder seleccionar elementos únicos de
+un vector, como podría ser el primer o el último elemento, o cualquier subconjunto
+del vector; pero también reemplazar, cambiar o eliminar algunos elementos. Esto es
+conocido como indexing (del inglés, indexación) y se realiza mediante el uso de los
+corchetes  [] . Existen cuatro maneras diferentes de elegir una parte de un vector:
+
+#### **Mediante un vector numérico de índices**
+
+Los índices deben ser enteros y todos positivos o todos negativos.
+Seleccionar los elementos con enteros positivos extrae los elementos de las
+posiciones indicadas:
+
+```{r}
+v <- c('uno', 'dos', 'tres', 'cuatro', 'cinco', 'seis')
+
+# Primer elemento
+v[1]
+
+# último elemento
+n <- length(v)
+v[n]
+
+# Tercer y cuarto elemento
+v[c(3, 4)]
+
+# Primeros 3 elementos
+v[1:3]
+
+# posiciones pares
+v[seq(2, n, 2)]
+
+# posiciones impares
+v[seq(1, n, 2)]
+  
+v[-seq(2, n, 2)] # Equivalente
+
+```
+Los valores negativos eliminan los elementos en las posiciones especificadas:
+```{r}
+v[c(-1,-3,-5)] # que es lo mismo que v[-c(1,3,5)]
+```
+Pero no podemos mezclar valores positivos y negativos:
+
+v[c(-1,5)]
+
+Error in v[c(-1, 5)] : only 0's may be mixed with negative subscripts
+
+#### **Por medio de un vector lógico** 
+
+En este caso se accederá a todos los valores
+correspondientes al valor  TRUE . Este tipo es útil en conjunción con las funciones de
+comparación. Para ejemplificar, supongamos que tenemos los datos
+correspondientes a las edades de los empleados de una determinada empresa.
+
+```{r}
+numeros <- c(-10, 0, 2, 5, -11,7, -2, 12, -3)
+
+positivos <- numeros > 0
+negativos <- numeros < 0
+neutros <- numeros == 0
+numeros[positivos]
+numeros[negativos]
+numeros[neutros]
+```
+#### **Por el nombre de los elementos **  
+
+Si hemos dado nombre a los elementos del vector, podemos seleccionar sus
+elementos con un vector de tipo  character
+
+```{r}
+cantidades <- c("tv"=30, "laptop"=63, "tablet"=78, "phone"=82)
+cantidades[c("tv", "tablet")]
+```
+#### **Utilizando los corchetes**
+
+Utilizando los corchetes sin especificar ninguna posición,  [] , obtendremos el
+vector completo:
+
+```{r}
+numeros <- c(-10, 0, 2, 5, -11,7, -2, 12, -3)
+numeros[]
+```
+### **Eliminación de un vector**
+
+Si queremos eliminar un vector en R, podemos utilizar la función  **rm()**  (remove).
+
+```{r}
+v <- c(1,2,3,4,5,6)
+v
+rm(v)
+```
+```
+v
+Error: objeto 'v' no encontrado
+```
+
+
+
+
+
+
 
  
