Ejemplo EDA curso metodología de la ciencia de datos

--- a/Curso metodologia de la ciencia de datos/Introducción al análsis exploratorio de datos/calidad-del-aire/calidad_aire_EDA.Rmd
+++ b/Curso metodologia de la ciencia de datos/Introducción al análsis exploratorio de datos/calidad-del-aire/calidad_aire_EDA.Rmd
@@ -18,7 +18,7 @@ output:
 7. Analisis de correlacion entre variables.  
 
 
-### Paso 1: Cargar las librerias
+## Paso 1: Cargar las librerias
 
 ```{r, results = "show", message = FALSE, warning = FALSE}
 #Carga de librerias
@@ -29,7 +29,7 @@ library(corrplot)
 library(dplyr)
 ```
 
-### Paso 2: Cargar datos
+## Paso 2: Cargar datos
 ```{r, results = "hide", message = FALSE, warning = FALSE}
 
 calidad_aire<- 
@@ -43,7 +43,7 @@ Veamos algunas filas del dataset
 head(calidad_aire)
 ```
 
-### Paso 3: Analisis exploratorio
+## Paso 3: Analisis exploratorio
 
 La función **str()** permite conocer de forma compacta la estructura interna de la tabla de datos indicando el tipo de variables, los rangos de valores y una muestra de dichos valores donde de un vistazo se puede apreciar la presencia de valores ausentes identificados mediante las siglas **NA** (del inglés, not allowed o no disponible)
 
@@ -68,7 +68,7 @@ Según los resully¿tados obtenidos, las principales caracteríaticas que presen
 * Presenta tres variables del Sistema de Coordenadas Geográficas: Longitud y Latitud y Posición, para
 georreferenciar cada una de las estaciones de calidad de aire de Castilla y León.
 
-### paso 4: Ajuste de tipos de variables.
+## paso 4: Ajuste de tipos de variables.
 
 Debemos verificar que cada variable se ha almacenado con el tipo de valor que
 corresponde. Por ejemplo, que las variables que contienen valores numéricos representan
@@ -138,7 +138,53 @@ calidad_aire <- calidad_aire %>%
 
 Verificamos la cantidad de columnas y el tipo, nuevamente usando la función str()
 
-```{r}
+```{r} 
 str(calidad_aire)
 ```
 
+##  Paso 5: Deteccion y tratamiento de datos ausentes.
+
+Con la función *is.na()* comprobamos la existencia de valores ausentes. El resultado de esta
+función es un vector lógico (TRUE o FALSE), de tal forma que cuando el objeto (por ejemplo,
+un valor, una lista o la columna de una tabla) que se evalúa presenta un valor ausente
+devuelve TRUE, en caso contrario devuelve FALSE. Existen otras funciones muy útiles, que
+también se pueden usar para evaluar la existencia de NAs: la función *any(is.na())* devuelve
+TRUE si la tabla presenta al menos un valor ausente, sin indicar el número de valores perdidos
+que presenta la tabla, ni la posición; la función sum(is.na()), permite determinar el número
+de valores ausentes; *mean(is.na())*, muestra el porcentaje de valores perdidos que presenta
+la tabla con la cual estamos trabajando.
+
+```{r}
+# Devuelve el número de NAs que presenta la tabla
+sum(is.na(calidad_aire))
+
+# Devuelve el % de valores perdidos
+mean(is.na(calidad_aire))
+```
+
+En ocasiones conviene realizar una detección de valores ausentes por columnas, en lugar de
+por filas, para identificar si alguna de las variables del dataset presenta un determinado nivel de datos perdidos. Para ello podemos utilizar la función *colMeans(is.na())* y la función *colSums(is.na())*.
+
+```{r}
+# Detección del número de valores perdidos en cada una de 
+#las columnas que presenta la tabla
+colSums(is.na(calidad_aire))
+
+# Detección del % de valores perdidos en cada una de 
+#las columnas que presenta la tabla
+round(colMeans(is.na(calidad_aire)),2)
+```
+Analizando el conjunto de datos con el cual estamos trabajando en esta guía, podemos
+observar que la tabla “calidad_aire” presenta un total de **116.281** valores perdidos, el **21%** del total. 
+
+Si analizamos los **NA's**, en cada una de las variables, dos de ellas: **CO** y
+**PM25**, presenta un porcentaje superior al **50%**, del **77%** y **88%* respectivamente, lo
+que conlleva una ausencia significativa de información en el dataset de trabajo. Esta
+anomalía debe ser tratada de alguna forma para disminuir su impacto en el objetivo de
+reutilización de los datos.
+
+- el primer tratamiento que vamos
+a realizar sobre los datos perdidos, es la eliminación de las dos variables que presentan un
+porcentaje superior al 50 %, ya que un número de NAs tan alto puede producir errores o
+distorsionar los análisis posteriores al no ser usadas las filas que presentan NAs (en este caso,
+no se usaría más del 50% de las observaciones).
